[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Background/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UserInterface/TitleScreen/TitleScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 200
outline_size = 3
outline_color = Color( 0, 0.533333, 0.0196078, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 82
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Title" type="Label" parent="."]
anchor_left = 0.334
anchor_top = 0.069
anchor_right = 0.666
anchor_bottom = 0.347
margin_left = -0.0400391
margin_top = 0.639992
margin_right = 0.0400391
margin_bottom = 0.320007
rect_pivot_offset = Vector2( 439, 207 )
custom_colors/font_color = Color( 0.101961, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "SNAKE :"
align = 1

[node name="SubTitle" type="Label" parent="Title"]
anchor_left = 0.168
anchor_top = 0.442
anchor_right = 0.832
anchor_bottom = 0.802
margin_left = 0.199982
margin_top = 0.199982
margin_right = -0.200012
margin_bottom = 0.199982
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.843137, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "BATTLE ROYALE"
align = 1

[node name="Play" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.376
anchor_top = 0.424
anchor_right = 0.624
anchor_bottom = 0.529
margin_left = -0.560059
margin_top = -0.560059
margin_right = -5.44006
margin_bottom = -1.76007
focus_neighbour_left = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../Exit")
custom_fonts/font = SubResource( 3 )
text = "PLAY"

[node name="Settings" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = 130.0
margin_right = 315.0
margin_bottom = 280.0
focus_neighbour_left = NodePath("../Exit")
focus_neighbour_top = NodePath("../Play")
focus_next = NodePath("../Play")
focus_previous = NodePath("../Exit")
custom_fonts/font = SubResource( 3 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.01
anchor_top = 0.947
anchor_right = 0.079
anchor_bottom = 0.979
margin_left = 0.399998
margin_top = -0.680054
margin_right = -0.240005
margin_bottom = 0.23999
focus_neighbour_top = NodePath("../Play")
focus_neighbour_right = NodePath("../Play")
focus_next = NodePath("../Play")
custom_fonts/font = SubResource( 4 )
text = "EXIT"

[node name="Version" type="Label" parent="."]
modulate = Color( 0.247059, 0.247059, 0.247059, 1 )
anchor_left = 0.944
anchor_top = 0.944
anchor_right = 0.993
anchor_bottom = 1.0
margin_left = 0.359863
margin_top = 0.639893
margin_right = 0.919922
margin_bottom = -2.0
text = "V1.0"
align = 2

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
